--- a/footer.html
+++ b/footer.html
@@ -1,5 +1,5 @@
 <div class="footer">
-    <footer> &copy Ondřej Šimků 2021</footer>
+    <footer> &copy Zikaron, z.s. 2022</footer>
 </div>
 
 </div>
